--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hexmap",
-  "version": "1.0.0",
-  "description": "hex map, can geohash and generate hexagons with icosahedron as base",
+  "version": "1.0.2",
+  "description": "can geohash and generate hexagons with icosahedron as base",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
