--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "array-flat-polyfill": "^1.0.1"
   }
 }
